versioned_docs/version-1.5/dankcalendar/index.mdx
---
title: DankCalendar
description: Local, Google, Microsoft, CalDAV, and iCloud calendars in one standalone app
sidebar_position: 1
---

import Hero from '@site/src/components/Hero';
import useBaseUrl from '@docusaurus/useBaseUrl';
import Head from '@docusaurus/Head';

<Head>
  <title>DankCalendar — desktop calendar app for Linux and FreeBSD</title>
  <meta property="og:title" content="DankCalendar" />
  <meta property="og:site_name" content="DankCalendar" />
  <meta name="description" content="DankCalendar is a free, open-source desktop calendar app for Linux and FreeBSD that brings your Local, Google, Microsoft, CalDAV, and iCloud calendars together in one place." />
  <script type="application/ld+json">{JSON.stringify({
    '@context': 'https://schema.org',
    '@type': 'SoftwareApplication',
    name: 'DankCalendar',
    operatingSystem: 'Linux, FreeBSD',
    applicationCategory: 'Productivity',
    url: 'https://danklinux.com/docs/dankcalendar/',
    description: 'DankCalendar is a free, open-source desktop calendar app for Linux and FreeBSD. It brings Local, Google, Microsoft, CalDAV, and iCloud calendars together in one place so users can view and manage events, respond to meeting invitations, track tasks, and get reminders.',
    offers: {'@type': 'Offer', price: '0', priceCurrency: 'USD'},
  })}</script>
</Head>

<Hero
  asciiArt={`██████╗  ██████╗ █████╗ ██╗     
██╔══██╗██╔════╝██╔══██╗██║     
██║  ██║██║     ███████║██║     
██║  ██║██║     ██╔══██║██║     
██████╔╝╚██████╗██║  ██║███████╗
╚═════╝  ╚═════╝╚═╝  ╚═╝╚══════╝`}
  hideTitle={false}
/>

# DankCalendar

DankCalendar is a free, open-source desktop calendar app for Linux and FreeBSD. Its purpose is to bring your Local, [Google](https://calendar.google.com/), [Microsoft](https://outlook.com/), [CalDAV](https://en.wikipedia.org/wiki/CalDAV), and [iCloud](https://www.icloud.com/calendar/) calendars together in one place, so you can view and manage events, respond to meeting invitations, track tasks, and get reminders across all your accounts — while your data stays on your device. It runs as a lightweight daemon with a tray icon, keeps your accounts in sync in the background, and has the look and feel of [DankMaterialShell](https://github.com/AvengeMedia/DankMaterialShell). `dcal` is DankCalendar's command-line name.

Built with [Quickshell](https://quickshell.org/) and [Go](https://go.dev/).

<figure style={{ textAlign: 'center' }}>
  <img
    src={useBaseUrl('/img/blog/dankcalendar/preview.png')}
    alt="DankCalendar month view with the settings and add-account dialogs open"
    style={{ maxWidth: '640px', width: '100%', borderRadius: '12px' }}
  />
  <figcaption>DankCalendar's month view, settings, and account setup.</figcaption>
</figure>

## Features

- **Multiple Providers**: Connect Local, Google, Microsoft, CalDAV, iCloud, Evolution, and read-only iCal/webcal subscriptions, and view every calendar in a single unified agenda.
- **Month, Week, Day, Agenda & Tasks**: Switch between five views, with recurring-event support and full recurrence editing.
- **Tasks**: View, create, and complete VTODO tasks from calendars that provide task lists.
- **Meeting Invitations**: Accept, decline, or tentatively respond to invitations, with attendee status pushed back to your provider.
- **Background Sync**: A lightweight daemon keeps your accounts in sync and serves the UI over IPC. Closing the window only hides it. Sync and reminders keep running.
- **Event Reminders**: Native desktop notifications for upcoming events, with per-event and per-calendar reminder configuration.
- **Tray Integration**: A system tray icon to show, hide, and quit the app, plus quick access to upcoming events.
- **Secure Credentials**: OAuth tokens and account secrets are stored in your system keyring, not in plaintext config files.
- **Keyboard Navigation**: Full keyboard-driven navigation with a shortcuts overlay, a go-to-date jump, and spotlight-style search across your events.
- **Scriptable IPC**: A scriptable IPC surface for keybinds and automation.
- **Localized**: User-facing strings are translatable and managed through POEditor, with automatic right-to-left layout mirroring.

## Documentation

- [Installation](installation) - Install dcal and set up the background daemon
- [Accounts](accounts) - Connect Local, Google, Microsoft, CalDAV, iCloud, Evolution, and iCal calendars
- [Usage](usage) - CLI commands for the window, sync, reminders, and invitations
- [Keyboard & Navigation](navigation) - Views, shortcuts, and jumping around quickly
- [IPC](ipc) - Scriptable IPC surface for keybinds and automation

## Contributing

`dcal` is open source and welcomes contributions. Bug fixes, widgets, features, providers, and translations all help:

- **Source Code**: [GitHub Repository](https://github.com/AvengeMedia/dankcalendar)
- **Issues**: Report bugs and request features on GitHub
- **Translations**: Strings are managed through POEditor. See [CONTRIBUTING.md](https://github.com/AvengeMedia/dankcalendar/blob/master/CONTRIBUTING.md)

## License

`dcal` is released under the MIT License. See the [LICENSE](https://github.com/AvengeMedia/dankcalendar/blob/master/LICENSE) file for details.

## Privacy & Terms

DankCalendar is a local application — your calendar data and credentials stay on your device. See the [Privacy Policy](/dankcalendar/privacy) and [Terms of Service](/dankcalendar/terms).
